# software-project-template

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yml  init_template.sh
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: example_endpoint.py  health.py
backend/app/api/models/: example_models.py  health.py
backend/app/configs/: settings.py
backend/app/exceptions/: service_exceptions.py
backend/app/infra/: database.py  db_client.py
backend/app/init/: dicontainer.py
backend/app/services/: example_service.py
docs/: commands.md  decisions.md  directory_structure.md  style.md
docs/architecture/: data.md  decisions.md
frontend/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
